--- a/Framework/Zerra.CQRS.AzureEventHub/Zerra.CQRS.AzureEventHub.csproj
+++ b/Framework/Zerra.CQRS.AzureEventHub/Zerra.CQRS.AzureEventHub.csproj
@@ -1,34 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFrameworks>net5.0;net6.0;net7.0</TargetFrameworks>
-		<Authors>Steven Zawaski</Authors>
-		<Product>KaKush LLC</Product>
-		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-		<PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, Azure Event Hub</PackageTags>
-		<RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
-		<Description>Azure Event Hub implementations of producer and consumer for commands and events in the CQRS Zerra Framework.</Description>
-		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PropertyGroup>
+        <TargetFrameworks>net5.0;net6.0;net7.0</TargetFrameworks>
+        <Authors>Steven Zawaski</Authors>
+        <Product>KaKush LLC</Product>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, Azure Event Hub</PackageTags>
+        <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
+        <Description>Azure Event Hub implementations of producer and consumer for commands and events in the CQRS Zerra Framework.</Description>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <LangVersion>10.0</LangVersion>
-        <Version>4.1.4</Version>
-	</PropertyGroup>
+        <Version>4.1.5</Version>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<None Include="..\..\LICENSE.txt">
-			<Pack>True</Pack>
-			<PackagePath></PackagePath>
-		</None>
-	</ItemGroup>
+    <ItemGroup>
+        <None Include="..\..\LICENSE">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
 
-	<ItemGroup>
-	  <PackageReference Include="Azure.Messaging.EventHubs" Version="5.6.2" />
-	  <PackageReference Include="Microsoft.Azure.Management.EventHub" Version="5.0.0" />
-	  <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.9" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Azure.Messaging.EventHubs" Version="5.6.2" />
+        <PackageReference Include="Microsoft.Azure.Management.EventHub" Version="5.0.0" />
+        <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.9" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\Zerra\Zerra.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Zerra\Zerra.csproj" />
+    </ItemGroup>
 
 </Project>
