--- a/Framework/Zerra.Identity/Zerra.Identity.csproj
+++ b/Framework/Zerra.Identity/Zerra.Identity.csproj
@@ -6,7 +6,7 @@
 		<Copyright>KaKush LLC</Copyright>
 		<Product>Zerra Framework</Product>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<LangVersion>8.0</LangVersion>
 		<PackageTags>Identity Management, SSO, SAML, OAuth, OpenID</PackageTags>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -41,7 +41,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="..\..\LICENSE.txt">
+		<None Include="..\..\LICENSE">
 			<Pack>True</Pack>
 			<PackagePath></PackagePath>
 		</None>
