--- a/Framework/Zerra.Repository/Zerra.Repository.csproj
+++ b/Framework/Zerra.Repository/Zerra.Repository.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0;net6.0;net7.0</TargetFrameworks>
-    <Authors>Steven Zawaski</Authors>
-    <Copyright>KaKush LLC</Copyright>
-    <Product>Zerra Framework Repository</Product>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-    <Description>Agnostic repository core library for the Zerra Framework.  Can switch between relational storage, document storage, and event storage without changing domain code.   This library will need a backing such as Zerra.Repository.Sql.MsSql or Zerra.Repository.EventStore.EventStoreDB
+    <PropertyGroup>
+        <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0;net6.0;net7.0</TargetFrameworks>
+        <Authors>Steven Zawaski</Authors>
+        <Copyright>KaKush LLC</Copyright>
+        <Product>Zerra Framework Repository</Product>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <Description>Agnostic repository core library for the Zerra Framework.  Can switch between relational storage, document storage, and event storage without changing domain code.   This library will need a backing such as Zerra.Repository.Sql.MsSql or Zerra.Repository.EventStore.EventStoreDB
 
 Commonly used types:
 Zerra.Repository.Repo
@@ -26,24 +26,25 @@ Zerra.Repository.RelationAttribute
 Zerra.Repository.PropertyAttribute
 Zerra.Repository.StorePropertiesAttribute
 Zerra.Repository.IdentityAttribute
-Zerra.Repository.ApplyEntityAttribute</Description>
-    <Company>KaKush LLC</Company>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM</PackageTags>
-    <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
-    <LangVersion>10.0</LangVersion>
-	<Version>4.1.0</Version>
-  </PropertyGroup>
+Zerra.Repository.ApplyEntityAttribute
+        </Description>
+        <Company>KaKush LLC</Company>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM</PackageTags>
+        <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
+        <LangVersion>10.0</LangVersion>
+        <Version>4.1.5</Version>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <None Include="..\..\LICENSE.txt">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
+    <ItemGroup>
+        <None Include="..\..\LICENSE">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Zerra\Zerra.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Zerra\Zerra.csproj" />
+    </ItemGroup>
 
 </Project>
