Update Azure Service Bus References

--- a/Framework/Zerra.CQRS.AzureServiceBus/Zerra.CQRS.AzureServiceBus.csproj
+++ b/Framework/Zerra.CQRS.AzureServiceBus/Zerra.CQRS.AzureServiceBus.csproj
@@ -11,7 +11,7 @@
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <LangVersion>10.0</LangVersion>
-        <Version>4.1.6</Version>
+        <Version>4.2.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
@@ -22,8 +22,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.9.0" />
-        <PackageReference Include="Microsoft.Azure.Management.ServiceBus" Version="4.0.0" />
+        <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.15.0" />
+        <PackageReference Include="Azure.ResourceManager.ServiceBus" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
