--- a/Framework/Zerra.CQRS.RabbitMQ/Zerra.CQRS.RabbitMQ.csproj
+++ b/Framework/Zerra.CQRS.RabbitMQ/Zerra.CQRS.RabbitMQ.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.1;net5.0;net6.0;net7.0</TargetFrameworks>
+        <TargetFrameworks>net5.0;net6.0;net7.0</TargetFrameworks>
         <Authors>Steven Zawaski</Authors>
         <Copyright>KaKush LLC</Copyright>
         <Product>Zerra Framework CQRS Rabbit Message</Product>
@@ -13,7 +13,7 @@
         <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, RabbitMQ</PackageTags>
         <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
         <LangVersion>10.0</LangVersion>
-        <Version>4.1.6</Version>
+        <Version>4.2.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
@@ -21,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="RabbitMQ.Client" Version="5.1.1" />
+        <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
     </ItemGroup>
 
     <ItemGroup>
