IBaseProvider Remove, Bus Cache

--- a/Demo/ZerraDemo.Common/cqrssettings.json
+++ b/Demo/ZerraDemo.Common/cqrssettings.json
@@ -1,54 +1,65 @@
 {
-  "MessageHost": "localhost:9092",
-  "RelayUrl": "",
-  "RelayKey": "",
-  "Services": [
-    {
-      "Name": "ZerraDemo.Web"
-    },
-    {
-      "Name": "ZerraDemo.Service.Pets",
-      "InternalUrl": "localhost:9001",
-      "ExternalUrl": "localhost:9001",
-      "EncryptionKey": "SecretTransportKey",
-      "Types": [
-        "IPetsQueryProvider",
-        "IPetsCommandHandler"
-      ],
-      "InstantiateTypes": []
-    },
-    {
-      "Name": "ZerraDemo.Service.Weather",
-      "InternalUrl": "localhost:9002",
-      "ExternalUrl": "localhost:9002",
-      "EncryptionKey": "SecretTransportKey",
-      "Types": [
-        "IWeatherQueryProvider",
-        "IWeatherCommandHandler"
-      ],
-      "InstantiateTypes": []
-    },
-    {
-      "Name": "ZerraDemo.Service.Ledger1",
-      "InternalUrl": "localhost:9003",
-      "ExternalUrl": "localhost:9003",
-      "EncryptionKey": "SecretTransportKey",
-      "Types": [
-        "ILedger1QueryProvider",
-        "ILedger1CommandHandler"
-      ],
-      "InstantiateTypes": []
-    },
-    {
-      "Name": "ZerraDemo.Service.Ledger2",
-      "InternalUrl": "localhost:9004",
-      "ExternalUrl": "localhost:9004",
-      "EncryptionKey": "SecretTransportKey",
-      "Types": [
-        "ILedger2QueryProvider",
-        "ILedger2CommandHandler"
-      ],
-      "InstantiateTypes": []
-    }
-  ]
+    "MessageHost": "localhost:9092",
+    "RelayUrl": "",
+    "RelayKey": "",
+    "Services": [
+        {
+            "Name": "ZerraDemo.Web"
+        },
+        {
+            "Name": "ZerraDemo.Service.Pets",
+            "InternalUrl": "localhost:9001",
+            "ExternalUrl": "localhost:9001",
+            "EncryptionKey": "SecretTransportKey",
+            "Types": [
+                "IPetsQueryProvider",
+                "IPetsCommandHandler"
+            ],
+            "InstantiateTypes": []
+        },
+        {
+            "Name": "ZerraDemo.Service.WeatherCached",
+            "InternalUrl": "localhost:9005",
+            "ExternalUrl": "localhost:9005",
+            "EncryptionKey": "SecretTransportKey",
+            "Types": [
+                "IWeatherCachedQueryProvider",
+                "IWeatherCachedCommandHandler"
+            ],
+            "InstantiateTypes": []
+        },
+        {
+            "Name": "ZerraDemo.Service.Weather",
+            "InternalUrl": "localhost:9002",
+            "ExternalUrl": "localhost:9002",
+            "EncryptionKey": "SecretTransportKey",
+            "Types": [
+                "IWeatherQueryProvider",
+                "IWeatherCommandHandler"
+            ],
+            "InstantiateTypes": []
+        },
+        {
+            "Name": "ZerraDemo.Service.Ledger1",
+            "InternalUrl": "localhost:9003",
+            "ExternalUrl": "localhost:9003",
+            "EncryptionKey": "SecretTransportKey",
+            "Types": [
+                "ILedger1QueryProvider",
+                "ILedger1CommandHandler"
+            ],
+            "InstantiateTypes": []
+        },
+        {
+            "Name": "ZerraDemo.Service.Ledger2",
+            "InternalUrl": "localhost:9004",
+            "ExternalUrl": "localhost:9004",
+            "EncryptionKey": "SecretTransportKey",
+            "Types": [
+                "ILedger2QueryProvider",
+                "ILedger2CommandHandler"
+            ],
+            "InstantiateTypes": []
+        }
+    ]
 }
