--- a/Demo/ZerraDemo.Common/cqrssettings.json
+++ b/Demo/ZerraDemo.Common/cqrssettings.json
@@ -1,5 +1,5 @@
 {
-    "MessageHost": "localhost:9092",
+    "MessageHost": "localhost",
     "RelayUrl": "",
     "RelayKey": "",
     "Services": [
