--- a/Framework/Zerra.Identity/Zerra.Identity.csproj
+++ b/Framework/Zerra.Identity/Zerra.Identity.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net5.0;netstandard2.1;netstandard2.0;net48</TargetFrameworks>
+        <CheckEolTargetFramework>false</CheckEolTargetFramework>
 		<Authors>Steven Zawaski</Authors>
 		<Copyright>KaKush LLC</Copyright>
 		<Product>Zerra Framework</Product>
