--- a/Framework/Zerra.Repository.EventStoreDB/Zerra.Repository.EventStoreDB.csproj
+++ b/Framework/Zerra.Repository.EventStoreDB/Zerra.Repository.EventStoreDB.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFrameworks>net5.0;net6.0;net7.0</TargetFrameworks>
+        <CheckEolTargetFramework>false</CheckEolTargetFramework>
         <Authors>Steven Zawaski</Authors>
         <Copyright>KaKush LLC</Copyright>
         <Product>Zerra Framework Repository Event Store</Product>
