--- a/Framework/Zerra.Repository.PostgreSql/Zerra.Repository.PostgreSql.csproj
+++ b/Framework/Zerra.Repository.PostgreSql/Zerra.Repository.PostgreSql.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0;net6.0;net7.0</TargetFrameworks>
+        <CheckEolTargetFramework>false</CheckEolTargetFramework>
         <Authors>Steven Zawaski</Authors>
         <Copyright>KaKush LLC</Copyright>
         <Product>Zerra Framework Repository Sql</Product>
