--- a/Demo/ZerraDemo.Service.Ledger1/Properties/launchSettings.json
+++ b/Demo/ZerraDemo.Service.Ledger1/Properties/launchSettings.json
@@ -5,6 +5,9 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Dev"
       }
+    },
+    "Docker": {
+      "commandName": "Docker"
     }
   }
 }
