--- a/Demo/ZerraDemo.Service.Weather/ZerraDemo.Service.Weather.csproj
+++ b/Demo/ZerraDemo.Service.Weather/ZerraDemo.Service.Weather.csproj
@@ -3,7 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Framework\Zerra.Logger\Zerra.Logger.csproj" />
