--- a/Demo/ZerraDemo.Service.Weather/ZerraDemo.Service.Weather.csproj
+++ b/Demo/ZerraDemo.Service.Weather/ZerraDemo.Service.Weather.csproj
@@ -1,15 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Framework\Zerra.Logger\Zerra.Logger.csproj" />
